Final revision before part 3 release

--- a/MMX_Compendium.tex
+++ b/MMX_Compendium.tex
@@ -105,7 +105,7 @@
 	%\item By the previous two statements, X had to be sealed roughly around 2014.
 		\item Maverick Hunters operate for about two years before the first game's events, according to the Japanese version of Dr.~Cain's journal and contrary to the two-month stated in the English version of the same source. This due the fact that two months aren't sufficient to explain all events that occur before the first game, such as Zero's awakening, X joining the Hunters or X befriending Zero.
 		\item According to the original story, X does not join the Hunters until Sigma's revolution begins. Here we deliberately choose the remake storytelling, as it allows us to better explain some relationship between the characters.
-		\item Events shown in \textit{Day of $\Sigma$}, save for Dr.~Cain's fate, actually happens. This is mainly due to the fact that what is shown isn't in direct contrast with anything shown in games except the previously mentioned event.		
+		\item Events shown in \textit{Day of $\Sigma$}, except for Dr.~Cain's fate, actually happens. This is mainly due to the fact that what is shown isn't in direct contrast with anything shown in games except the previously mentioned event.		
 	\end{itemize}
 	}
 }
@@ -113,10 +113,10 @@
 \warningbox{\small{
 		\begin{itemize}	
 				\item After his death, Dr.~Light consciousness keeps living via an AI, which communicates with X through the capsules. This is due the fact that on multiple occasions Dr.~Light's hologram is fully aware of the circumstances and even directly answers posed questions.
-				\item The events of Bass' endings in both \textit{Mega Man: The Power Battle} and \textit{ Mega Man 2: The Power Fighters} are considered to happened, as they do not contradict any other statement from other games and also provide a little more insight on Zero's origins.
+				\item The events of Bass' endings in both \textit{Mega Man: The Power Battle} and \textit{ Mega Man 2: The Power Fighters} are considered to have happened, as they do not contradict any other statement from other games and also provide a little more insight on Zero's origins.
 				\item Just like Dr.~Light's consciousness manages to live on, Wily's too manages to survive death, although unclear how. However the presence of a figure very close of Wily's one which operates throughout the games heavily suggests that he managed to make his consciousness live on.
 				\item The X2's ending is considered to be the one where Zero is rescued. This is due the presence, in the X5 opening, of a scene depicting Zero against his clone. Since this scene is supposed to be a summary of X and Zero's past battle, here that battle is considered to have happened.
-				\item The final battle against X and Vile mk.II takes place within Doppler's laboratory (instead of Volt Kurageil).
+				\item The final battle against X and Vile mk-2 takes place within Doppler's laboratory (instead of Volt Kurageil).
 		\end{itemize}
 	}
 }
