--- a/src/character_Sigma_and_Vile.tex
+++ b/src/character_Sigma_and_Vile.tex
@@ -61,6 +61,11 @@ Vile's final appearance is inside Sigma Fortress, where he attempts again to des
 \end{quote}
 
 \section{Mega Man X3: Vile mk-2}
+\begin{figure}[htp]
+	\centering
+	\includegraphics[height=\portraitsize]{figures/X3/Doppler_stages/X_DiVE_Vile_MK-II.png}
+	\caption{Vile mk-2}
+\end{figure}
 Vile's story did not end in Sigma's fortress, as his remains are, in fact, recovered by unspecified figures (possibly the same people who recovered also Zero's body parts), probably to repair him later in time. It will take more than six months for Vile to come back to life, only after what remained of him ended up in the hands of a corrupted Dr.~Doppler, who proceeds to rebuild and upgrade him into his new form, Vile mk-2. In the process, it is also possible that Vile gets infected with the sigma virus, making him even more unstable than before. This new version of Vile, in fact, is moved only by hatred and vengeance for X and Zero, the causes of his first demise, even to the point of ignoring the orders from his new master Doppler, who required to capture X alive. Vile, instead, act as he wishes, preferring to lure X into a mined factory and face him instead of actively chasing X as the nightmare police does. Ironically, some sources seem to imply Vile's deep hate for X is much closer to human behavior than X's way to be~\cite{Xcoll1:Manual_X3,wayback:X3_resources}, in a sense making Vile better than X. However, Vile is blinded by the hatred and isn't capable to acknowledge such fact. Despite everything, however, as pointed out in~\cite{wayback:X3_resources}, Vile  doesn't seem to have gone completely mad, has he still shows some glimpse of sanity, for example by preferring to lure X into a trap he prepared (the mined factory) instead of charging forward. Moreover, even after being defeated by X the first time, Vile opts to retreat and reorganize, by building his own personal Ride Armor to use against X. In this settings, Vile also proves again his skills in Ride Armors technology, by building yet another custom armor (the fourth one), the ``Goliath'', specifically made for combat and that Vile's refers to as the world's most advanced Ride Armor~\cite{book:MH_field_guide}.  After having completed his plan, Vile begins to wait for X inside Doppler's laboratory, knowing perfectly X will come to stop Doppler. In the wait, however, Vile decides to let loose to his destructive impulses, wrecking havoc inside the laboratory's section he was supposed to protect. 
 
 In the end, Vile and X meet again and have a final clash. Vile employs all his arsenal, Ride Armor included, but is ultimately defeated again by X. Before dying, Vile manages only to unleash a final warning, telling X that no matter how, he will always hunt him until X has finally died\footnote{``\textit{Don’t think that this is the end, X! I will haunt you to the day you die$\dots$.}''-Vile mk-2~\cite{wordpress:X3_japanese_script}}.
