--- a/src/timeline.tex
+++ b/src/timeline.tex
@@ -47,20 +47,20 @@ Here a timeline of all events concerning the Mega Man X series in chronological 
 	\tabline& $\cdot$ Storm Eagle becomes leader of the 7th Airborne Unit. Overdrive Ostrich joins the same unit.\\
 	\tabline& $\cdot$ Boomer Kuwanger, Gravity Beetle, Flame Stag and Spark Mandrill join the 17th Elite Unit.\\
 	\tabline& $\cdot$ Sting Chameleon is assigned to the 9th Special Force (Ranger Unit).\\
-	\tabline& $\cdot$ Magna Centipede joins the 0th Special Unit ``Shinobi''.\\
-	\tabline& $\cdot$ Vile joins the 17th Elite Unit\footnote{Here the fact that all mavericks joins the organization from the beginning is only author's flavor as no information about these events are given}.\\
-	\timepoint{Scientists build Crush Crawfish as a combat reploid. However a bug in his AI makes him incredibly violent. Hence, he is sealed away in a warehouse for later repair.}
+	\tabline& $\cdot$ Magna Centipede and Blast Hornet join the 0th Special Unit ``Shinobi''.\\
+	\tabline& $\cdot$ Vile joins the 17th Elite Unit\footnote{Here the fact that all mavericks joins the organization from the beginning is only author's flavor as no information about these events are given.}.\\
+	\timepoint{Scientists build Crush Crawfish as a combat reploid. However a bug in his AI makes him incredibly violent, and he is sealed away in a warehouse for later repair.}
 	\midrule
 	\tabdot& 10$^{th}$ December 21XX: Maverick Hunters have been operating for about two years. X is still seeking his place in life.\\
 	\tabdot& Overdrive Ostrich has an accident, which deprives him of his flight ability. Ostrich retires from the Hunters.\\
 	\tabdot& Zero awakes and joins the 17th Elite Unit\\
 	\tabdot& X joins the 17th Elite Unit.\\
-	\tabdot& Wheel Gator attacks a comrade, and is forced to leave the Hunters while being chased.\\
+	\tabdot& Wheel Gator attacks a comrade, and is forced to leave the Hunters becoming a fugitive.\\
 	\tabdot& Sigma begins to actuate his plans.\\
 	\tabdot& A fault in Vile's brain circuits makes him unstable and borderline-maverick. The high ranks of the Maverick Hunters decides to jail him waiting for a judgment.\\
 	\tabdot& Sigma calls back Chill Penguin from the South Pole, making him temporarily join the 17th Elite unit. Before coming back, Chill Penguin eliminates his former superior.\\
 	\tabline& $\cdot$ Flame Mammoth is recalled too, but he doesn't join the 17th Elite Unit.\\
-	\tabdot&Sigma reaches for Morph Moth, being interested in his power of evolving through absorbing scraps, and enrolls him into his army. \\
+	\tabdot&Sigma reaches for Morph Moth, being interested in his powers, and enrolls him into his army. \\
 	%
 	% day of sigma
 	%
@@ -101,8 +101,8 @@ Here a timeline of all events concerning the Mega Man X series in chronological 
 	\timemoment{Gravity Beetle swears revenge against X for his brother's (Boomer Kuwanger) death.}
 	\tabdot& Vile repairs and upgrades his ride armor, while also setting up a plan to take down both Zero and X.\\
 	\tabline& $\cdot$ Sigma recovers defeated mavericks' dead bodies and resurrect them as an additional line of defense for his fortress.\\
-	\tabdot& Zero finds Sigma's hideout, and ask X to reach him to begin the final assault.\\
-	\tabdot& X and Zero enter Sigma's fortress but are ambushed by Vile, who captures both of them. However both Zero and X manage to break free from their prison and to take down Vile. Zero, however, dies in the fight too.\\
+	\tabdot& Zero finds Sigma's hideout, and asks X to reach him to begin the final assault.\\
+	\tabdot& X and Zero enter Sigma's fortress but are ambushed by Vile, who captures both of them. However both Zero and X manage to break free from their prison and to take down Vile. Zero, however, also dies in the fight.\\
 	\tabdot& X continues traveling through the fortress. Scientists, worried, accelerate the development of the tyrannosaurus mechaniloid mounting its head onto a moving platform, thus creating D-REX, which is however destroyed by X.\\
 	%	\tabdot& Sigma manages to separate his mind from the body. His mind flee, while his original body remains back to fight X.\\
 	\tabdot& X finally reaches Sigma, and the two fight. X defeats Velguarder first and Sigma immediately after. Sigma decides then to combine himself with the still incomplete wolf-mechaniloid built for him and become Wolf Sigma. X, however, manages to destroy him again. After Sigma's defeat, his fortress begins to collapse and falls into the ocean. X teleports outside.\\
@@ -117,20 +117,19 @@ Here a timeline of all events concerning the Mega Man X series in chronological 
 	\addlinespace[1.5ex]
 	\timepoint{X returns the First Armor to Dr.~Light. The data acquired from the fights are used by Light's AI to upgrade the armor.}
 	\tabdot& X is appointed leader of the 17th Elite Unit.\\
-	\tabdot& Zero's control circuit is retrieved by the Maverick Hunters form the remaining of Sigma's fortress\\
+	\tabdot& Zero's control circuit is retrieved by the maverick hunters form the remaining of Sigma's fortress.\\
 	\tabdot& The X-Hunters, led by Serges, emerge from the shadows and take control of Sigma's army.\\
 	\timepoint{Zero's body remains are retrieved by the maverick forces. Serges begins its reconstruction. In the same occasion, Vile's remains are also retrieved.}
 	\tabdot& To increase the size of their army, the X-Hunters set up different factories to mass-produce Mavericks.\\
-	\tabline& In one of these factories, Wire Sponge is created. Despite his childish attitude, he is enrolled in the mavericks army due his strength.\\
-	\tabdot& The X-Hunters retrieve the remains of Zero's body and Serges begins its reparations.\\
+	\timemoment{In one of these factories, Wire Sponge is created. Despite his childish attitude, he is enrolled in the mavericks army due his strength.}
 	\tabdot& Crystal Snail, a mysterious reploid, is enrolled in Sigma's army.\\
 	\tabline& $\cdot$ Wheel Gator reaches the Maverick army, hoping to satisfy his destructive impulses.\\
 	\tabdot& Serges begins to build a new body for Sigma.\\
 	\tabdot& The battle between Maverick Hunter and Mavericks continues, with heavy losses from both sides.\\
-	\tabdot& Several Maverick Hunters bases are attacked and destroyed. The total number of effective in the Maverick Hunters organization is reduced to a quarter of its original value.\\
+	\tabdot& Several Maverick Hunters bases are attacked and destroyed, one of them by Violent alone. The total number of effective in the Maverick Hunters organization is reduced to a quarter of its original value.\\
 	\tabdot& Studying the defeated mavericks, Dr.~Cain discovers a chip in reploids brain which causes them to go maverick. The chip bears Sigma's insignia.\\
-	\timepoint{Zero's reconstruction is almost finished. However his control circuit is still far from completion.}
-	\tabdot& After some investigations, the Maverick Hunters locate the factory responsible for creating mavericks. X and his unit are dispatched to destroy the facility. In total six months have been passed since the end of the first uprising.\\
+	\timepoint{Zero's reconstruction is almost finished. However his control circuit is still missing.}
+	\tabdot& After some investigations, the maverick hunters locate the factory responsible for creating mavericks. X and his unit are dispatched to destroy the facility. In total six months have been passed since the end of the first uprising.\\
 	%%
 	% X2
 	%%
@@ -148,18 +147,17 @@ Here a timeline of all events concerning the Mega Man X series in chronological 
 	\timemoment{Wheel Gator leads the giant Dinosaur Tank aircraft carrier into a city, to wipe it out.}
 	\timemoment{Crystal Snail is sent into the energen mines, to dig out crystals used to generate energy.}
 	\timepoint{X destroys two of the SA-class Maverick quicker than expected. The three X-Hunters are forced to take action challenging X to a duel, using Zero's repaired parts as bait.}
-	\timepoint{X fights against the three X-Hunters and wins, delivering Zero's parts to Dr.~Cain which immediately begins his reconstruction.}
+	\timepoint{X fights against the three X-Hunters and wins, delivering Zero's parts to Dr.~Cain, who immediately begins his reconstruction.}
 	\timepoint{Deprived of their main weapon, Serges hurry in completing Sigma's body. To mitigate the loss of Zero, he also creates a replica of him, loyal to Sigma and with a black armor.}
 	\timepoint{X manages to stop all remaining mavericks. In the meanwhile, he also obtains the Second Armor from Dr.~Light capsules.}
 	\timepoint{Dr.~Cain manages to locate the X-Hunters fortress, situated in the north pole.}
 	\timepoint{Serges completes both Sigma's body and fake Zero.}
 	\timemoment{Sigma learns from Serges about Zero's true origins.}
 	\timepoint{X storms the X-Hunters base. The three X-Hunters try to stop him using all their available tools, but are destroyed}
-	\timemoment{After X-Hunter's defeat, Sigma reveals himself to X, and gives him an appointment to the Central Computer. After the message the base explodes.}
+	\timemoment{After X-Hunters' defeat, Sigma reveals himself to X, and gives him an appointment to the Central Computer. After the message the base explodes.}
 	\timepoint{X meet with Sigma at the Central Computer. Sigma uses the Zero replica to attack X, but the real Zero arrives and destroys his copy.}
 	\timemoment{Zero proceeds to destroy the main computer.}
-	\timemoment{X and Sigma clashes. X destroys Sigma's new body.}
-	\timemoment{Sigma assumes his true form of a virus, and materializes to try killing X. X however manages to defeat him and forces Sigma to flee.}
+	\timemoment{X and Sigma clashes. X destroys Sigma's new body. Sigma assumes his true form of a virus, and materializes to try killing X. X however manages to defeat him and forces Sigma to flee.}
 	%%
 	% X2-X3
 	%%
@@ -167,8 +165,8 @@ Here a timeline of all events concerning the Mega Man X series in chronological 
 	\multicolumn{2}{c}{\textbf{Between X2 and X3}}\\
 	\addlinespace[1.5ex]
 	\timepoint{X return the Second Armor to Dr.~Light's capsules, which proceed to upgrade it.}
-	\timepoint{The Maverick Hunters proceed to develop a new version of Ride Armor, the DRA-00, which can change form depending on the installed module.}
-	\timepoint{The Maverick Hunters keep fighting the mavericks. The rebellion seems to head towards its end, but mavericks keep appearing.}
+	\timepoint{The maverick hunters proceed to develop a new version of Ride Armor, the DRA-00, which can change form depending on the installed module.}
+	\timepoint{The maverick hunters keep fighting the mavericks. The rebellion seems to head towards its end, but mavericks keep appearing.}
 	\timepoint{Reploid scientist Dr.~Doppler discovers the cause of the maverick behavior in a computer virus he names ``Sigma Virus''.}
 	\timepoint{Doppler develops a counter-measure\footnote{Depending on the source, this could be a vaccine, a cure or a suppression mechanism.} for the virus, returning infected reploids to normal.}
 	\timepoint{Reploids saved by Doppler gather around him. Humans join too, and thus Doppler Town is founded.}
@@ -176,19 +174,19 @@ Here a timeline of all events concerning the Mega Man X series in chronological 
 	\midrule
 	\timepoint{While researching the Sigma Virus, Doppler is infected, and falls under Sigma's command.}
 	\timepoint{Doppler begins developing his own army.}
-	\timemoment{Vile's remains reach Doppler, who rebuild Vile ad Vile mk-2. In the process, Vile is also infected with the virus, making him obsessed with revenge.}
+	\timemoment{Vile's remains reach Doppler, who rebuild Vile as Vile mk-2. In the process, Vile is also infected with the virus, making him obsessed with revenge.}
 	\timemoment{Doppler builds Bit and Byte, and creates the Nightmare Police.}
 	\timemoment{In a secret laboratory, Toxic Seahorse is created.}
 	\timemoment{Someone, presumably Doppler or someone under his orders, reaches and awakens Crush Crawfish, who was forgotten inside the warehouse he was sealed.}
-	\timepoint{Doppler invites to Doppler Town several famous reploids.}
+	\timepoint{Doppler invites to Doppler Town several advanced reploids.}
 	\timemoment{Zero refuses the invitation, since he is training. He sends his second-in-command, Blast Hornet instead.}
 	\timemoment{Tunnel Rhino accepts the invitation to showcase his mining skills.}
-	\timepoint{Doppler put his plan in motion. The countermeasure he developed turned out to be a placebo. Cured reploids returns maverick, and a new wave of virus spreads in Doppler town, brainwashing reploids to be Doppler's \textit{Doppler Incident}.}
+	\timepoint{Doppler put his plan in motion. The countermeasure he developed turned out to be a placebo. Cured reploids returns maverick, and a new wave of virus spreads in Doppler town, brainwashing reploids to be Doppler's soldiers. It it the beginning of the \textit{Doppler Incident}.}
 	\timemoment{Blast Hornet, Blizzard Buffalo, Volt Catfish, Neon Tiger, Tunnel Rhino and maverick hunter Mac are all infected.}
 	\timepoint{Infected mavericks begin rioting under Doppler's orders.}
 	\timemoment{Blast Hornet is sent to guard a weapon factory and warehouse.}
 	\timemoment{Blizzard Buffalo becomes incredibly aggressive, freezing a portion of Doppler Town with his powers.}
-	\timemoment{Toxic seahorse is sent by Doppler to conquer the Monarch Dam, to cut off Doppler's town water supply.}
+	\timemoment{Toxic seahorse is sent by Doppler to conquer the Monarch Dam, to cut off Doppler Town's water supply.}
 	\timemoment{Volt Catfish, under Doppler's orders, seize Doppler's Town power plant, to redirect the electricity towards Doppler's facilities. In the process, he absorb an excessive amount of electrical power which drives him berserk.}
 	\timemoment{Free again, Crush Crawfish hides in a shipyard and steals a submarine. There, he proceeds to attack and mangle anyone who draws near.}
 	\timemoment{Similarly to Crawfish, Tunnel Rhino hides in a quarry, and attacks everyone who comes close.}
@@ -210,17 +208,17 @@ Here a timeline of all events concerning the Mega Man X series in chronological 
 	\timemoment{Maverick hunters repels Doppler's attack. X and Zero returns to Doppler Town to complete their mission.}
 	\timepoint{X and Zero proceed facing Doppler's maverick. Doppler decides to send the Nightmare Police and Vile to pursue X as a backup plan.}
 	\timemoment{Vile ignores Doppler's orders, and set up a trap by mining an abandoned factory, and waiting for X.}
-	\timepoint{X faces Vile mk-2 and win, even escaping the bombs Vile ha planted. Vile retreats within Doppler's laboratory and begins working on his next move.}
+	\timepoint{X faces Vile mk-2 and wins, even escaping the bombs Vile ha planted. Vile retreats within Doppler's laboratory and begins working on his next move.}
 	\timepoint{Vile builds his new Ride Armor, the \textit{Goliath/Brown Bear}.}
 	\timepoint{Using the D-Rex as template, scientists develop the Rex-2000 ride armor.}
 	\timepoint{X and Zero stop all Doppler's mavericks, Bit and Byte included. By analyzing mavericks' control chip, Dr.~Cain discovers the location of Doppler's laboratory and also Doppler's plan to build a new body for Sigma.}
-	\timemoment{At the same time, X obtains from Light's capsules the third armor.}
+	\timemoment{X obtains from Light's capsules the third armor.}
 	\timepoint{X and Zero storms Doppler's laboratory, where they face the fused form of Bit and Byte, Godkarmachine o Inary, and the press disposer, one last desperate line of defense.}
 	\timepoint{X and Vile mk-2 have their last confrontation. X wins again, and Vile is killed once more.}
 	\timepoint{X faces Doppler and manages to bring the doctor back to his sense. To atone for his evil actions, Doppler indicates X where Sigma is hiding.}
 	\timepoint{X and Zero splits. Zero aims to destroy the laboratory's power generator, while X faces Sigma.}
 	\timemoment{X and Sigma clashes once more. Despite his upgraded body, Sigma is no match for X, and his body is destroyed one more time.}
-	\timepoint{In a last attempt to claim victory, Sigma enters in his viral form and corner X, in an attempt to possess his body.}
+	\timemoment{In a last attempt to claim victory, Sigma enters in his viral form and corner X, in an attempt to possess his body.}
 	\timemoment{Zero/Doppler appears, and saves X by using a vaccine onto Sigma, who disappears.}
 	\timepoint{X and Zero teleport outside as the laboratory begins to collapse. Doppler remains inside and dies as price for the evil he had committed.}
 \end{tabularx}
