--- a/src/vehicles.tex
+++ b/src/vehicles.tex
@@ -65,7 +65,7 @@ A list of all vehicles present in the X series. Artworks from~\cite{book:MMX_Com
 		\caption{Ride Armor modules : Chimera, Frog, Kangaroo, Hawk}
 	\end{figure}
 	
-	\item \hypertarget{vehicle:Ride_Armor_Goliath}{\textbf{Ride Armor ``\textit{Goliath/Brown Bear}'':}} The custom ride armor used by Vile Mk.II at Doppler's lab. Different from 
+	\item \hypertarget{vehicle:Ride_Armor_Goliath}{\textbf{Ride Armor ``\textit{Goliath/Brown Bear}'':}} The custom ride armor used by Vile mk-2 at Doppler's lab. Different from 
 	other Ride Armors, it was designed specifically for combat~\cite{wayback:X3_resources}. According to Vile, the Goliath is the world's most advanced Ride Armor.~\cite{book:MH_field_guide}
 	\begin{figure}[htp]
 		\centering
