--- a/src/x2.tex
+++ b/src/x2.tex
@@ -2003,7 +2003,7 @@ In this section, we'll cover a wide range of hidden game mechanics, useful tips,
 
 Given that this game reuses many features from the previous installment, all the information provided in section~\ref{X1:game_mechanics} remains valid.
 
-\subsection{Refill Rooms}\label{sec:refill}
+\section{Refill Rooms}\label{sec:refill}
 Inside certain stages, players may encounter isolated and empty rooms with no apparent exit. While these rooms may seem useless at first, they can actually be incredibly useful. By releasing a charged Silk Shot inside these rooms, various pickups will be drawn towards X, to refill his sub-tanks or weapon energy. The key advantage is that this operation has no limit, meaning it can be repeated endlessly (or until the Silk Shot has enough energy) to completely refill X's sub-tank. These rooms can be found in the following stages:
 \begin{itemize}
 	\item Deep Sea Base: after the large gate opened by the Sea Canthller at the beginning of the stage, if X slides down the left wall he will enter a secret room. Here unlimited health drops can be gathered.
@@ -2026,7 +2026,7 @@ Inside certain stages, players may encounter isolated and empty rooms with no ap
 	\end{figure}
 \end{itemize}
 
-\subsection{Wall-clip Glitch}
+\section{Wall-clip Glitch}
 If while firing a Strike Chain X climbs down a ladder, the Chain will move inside the wall and pull X towards it, This will cause X to get stuck in the wall. The video \path{videos/X2/Strike_Chain_clip.mp4} show this glitch in action.
 
 \begin{figure}[htp]
@@ -2035,7 +2035,7 @@ If while firing a Strike Chain X climbs down a ladder, the Chain will move insid
 	\caption{X clipping through a wall in the desert base.}
 \end{figure}
 
-\subsection{Neon Jump}\label{Neon_jump}
+\section{Neon Jump}\label{Neon_jump}
 The Neon Jump, sometimes also known as Liberty Jump, is an advanced technique which allows for double and even triple jumps by combining a charged shot of the arm parts with the air dash. The input command are the following:
 \begin{enumerate}
 	\item Charge up a charged shot
@@ -2049,7 +2049,7 @@ If everything has been done correctly, X will release the shot and jump one more
 \end{enumerate}
 If a triple jump is not needed, then it is easier to perform the double jump with only the second method, as pressing two buttons at the same time is easier than releasing one and pressing another in the same frame. Video \path{videos/X2/Neon_jump.mp4} shows how to perform the second method.
 
-\subsection{Magna Quartz miniboss skip}\label{ssect:Quartz_skip}
+\section{Magna Quartz miniboss skip}\label{ssect:Quartz_skip}
 In the Energen crystal mines it is possible to completely skip the Magna Quartz miniboss by performing a certain sequence of action which will cause the fight to not trigger properly. There are various methods to perform such glitch, although it is not clear how this glitch works~\cite{rta:x2}.
 The methods to perform such glitches include:
 \begin{itemize}
@@ -2065,16 +2065,16 @@ The methods to perform such glitches include:
 	\caption{X near a deactivated Magna Quartz.}
 \end{figure}
 
-\subsection{Magna Centipede Tail Spin Glitch}
+\section{Magna Centipede Tail Spin Glitch}
 In the Magna Centipede fight, immediately at the beginning of the fight it is possible to set up a glitch that, if done correctly, completely paralyzes the boss for the whole fight. The glitch revolves around using dash-wall jumps to mess with Centipede's mines orbit in order to make them spin around X endlessly, which will cause the boss to remain standing still waiting for the attack to complete, but also vulnerable to incoming attacks. 
 
 At the moment a precise guide on how to perform this glitch is not given, although there are some videos which aim to explain how to setup properly the glitch, such as~\cite{video:tail_spin_1} (from minute 27:00) and~\cite{video:tail_spin_2}.
 
-\subsection{Triple Neon Glitch}
+\section{Triple Neon Glitch}
 At the moment this section is written, the only evidence the author has found of this glitch existing inside the game can be found at~\cite{video:triple_glitch}. This glitch allows the player to perform three charged shots instead of the classical two by activating the pause menu at the same time the first shot is released, then exit the menu while holding the fire button, in order to trick the game into thinking the shot has never been fired. This results in X firing a charge shot but keeping two charged up, resulting in a possible triple shot.
 
 
-\subsection{Destroying Crystal Snail shell}
+\section{Destroying Crystal Snail shell}
 Only during the rematch against Crystal Snail, if the player hits the boss with a magnet mine and immediately after performs a Shoryuken \textbf{while} the boss is in his hit-stun animation, a glitch will occur. The glitch will cause for Crystal Snail's shell to not detach correctly and  instead of remaining inside the arena, the shell will promptly disappear from the screen. However, the boss will remain in his shell-less form and the AI pattern will forces him to move towards the missing shell. This will result in Crystal Snail dashing and jumping continuously on the rightmost wall, totally ignoring the player, which will be free to hit the boss without any risk or consequences. Video \path{videos/X2/Snail_shell_glitch.mp4} shows how to perform such glitch.
 \begin{figure}[htp]
 	\centering
