--- a/src/x3.tex
+++ b/src/x3.tex
@@ -2172,6 +2172,10 @@ If in fact, by any means, the player manages to position X in the bottom right c
 \section{Crush Crawfish instant kill}\label{glitch:Crawfish}
 The second glitch afflicting Crush Crawfish, permits instead to destroy the boss in a single shot. The glitch consists in hitting the boss with a charged Triad Thunder while he is in his invincibility state after getting hit the regular version of the same weapon. Should this occur, Crawfish health bar will be instantly depleted, killing him on the spot. The file \path{videos/X3/Crawfish_1hit.mp4} shows a combination of this glitch and the previous one to instantly defeat Crush Crawfish.
 
-\section{Godkarmachine-O-Inary stasis glitch}\label{glitch:Karmachine}
-Another boss affected by a glitch is Godkarmachine-O-Inari. If, in fact, X manages to absorb at least one of the two spheres t boss shoots using a charged Frost Shield and then he breaks it without firing, for example by dashing, the boss will go into stasis, as per waiting for the attack to end. This will leave Godkarmachine unarmed, eliminating any difficulty from the fight. It must be noted, however, that performing this glitch on the PC version of the game will result in a crash.
-%TODO video????
+\section{Godkarmachine O Inary stasis glitch}\label{glitch:Karmachine}
+Another boss affected by a glitch is Godkarmachine O Inari. If, in fact, X manages to absorb at least one of the two spheres t boss shoots using a charged Frost Shield and then he breaks it without firing, for example by dashing, the boss will go into stasis, as per waiting for the attack to end. This will leave Godkarmachine unarmed, eliminating any difficulty from the fight. It must be noted, however, that performing this glitch on the PC version of the game will result in a crash. File \path{videos/X3/Karmachine_stasis_glitch.mp4} shows a possible way to perform such glitch.
+\begin{figure}[htp]
+	\centering
+	\includegraphics[height=3cm]{figures/X3/Doppler_stages/gkarma_stasis.jpg}
+	\caption{Godkarmachine O Inary paralyzed as consequence of the glitch.}
+\end{figure}
